--- a/admin/partials-admin/sidebar.html
+++ b/admin/partials-admin/sidebar.html
@@ -50,7 +50,7 @@
     <li>
       <a href="instructor-chat.html">
         <span class="menu-icon">💬</span>
-        <span class="menu-text">دردشة الأساتذة</span>
+        <span class="menu-text">دردشة الأساتذة <span id="adminChatNavBadge" class="admin-chat-nav-badge" hidden>0</span></span>
       </a>
     </li>
     <li>
