--- a/instructor-dashboard.html
+++ b/instructor-dashboard.html
@@ -56,7 +56,7 @@
     <!-- Topbar -->
     <section class="instructor-admin-topbar card">
       <div class="topbar-left">
-        <button type="button" id="workspaceSidebarToggle" class="sidebar-toggle-btn" aria-label="تبديل القائمة">☰</button>
+        <button type="button" id="workspaceSidebarToggle" class="sidebar-toggle-btn" aria-label="تبديل القائمة" aria-controls="instructorWorkspace" aria-expanded="false">☰</button>
         <h2>لوحة الأستاذ</h2>
       </div>
       <div class="topbar-right">
@@ -225,64 +225,18 @@
               <!-- CURRICULUM -->
               <div class="tab-content" id="tab-curriculum">
                 <div class="builder-card">
-                  <div class="builder-card-head">
-                    <h3>عناصر إضافية تمنحك حرية أكبر</h3>
-                    <p>أضف الأهداف والمتطلبات ومخرجات التعلم كبنود ديناميكية.</p>
+                  <div class="builder-header">
+                    <h2>بناء الدروس والسلايدات</h2>
+                    <p>أضف محتوى السلايدات (نصوص + صور + فيديو) مع ضبط الخطوط والألوان وترتيب العناصر داخل كل سلايد.</p>
                   </div>
 
-                  <div class="list-editors">
-                    <div class="dynamic-list" data-list="objectives">
-                      <div class="dynamic-head">
-                        <h4>أهداف الدورة</h4>
-                        <button type="button" class="add-row-btn" data-target="objectives"><i class="fa-solid fa-plus"></i> إضافة هدف</button>
-                      </div>
-                      <div id="objectivesList" class="rows-container"></div>
-                    </div>
+                  <div id="lessonsContainer"></div>
+                  <div id="lessonsEmpty" class="empty-state">لم تتم إضافة أي درس بعد.</div>
 
-                    <div class="dynamic-list" data-list="requirements">
-                      <div class="dynamic-head">
-                        <h4>المتطلبات المسبقة</h4>
-                        <button type="button" class="add-row-btn" data-target="requirements"><i class="fa-solid fa-plus"></i> إضافة متطلب</button>
-                      </div>
-                      <div id="requirementsList" class="rows-container"></div>
-                    </div>
-
-                    <div class="dynamic-list" data-list="outcomes">
-                      <div class="dynamic-head">
-                        <h4>مخرجات التعلم</h4>
-                        <button type="button" class="add-row-btn" data-target="outcomes"><i class="fa-solid fa-plus"></i> إضافة مخرج</button>
-                      </div>
-                      <div id="outcomesList" class="rows-container"></div>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="builder-card">
-                  <div class="builder-card-head">
-                    <h3>خطة المنهج (Modules/Lessons)</h3>
-                    <p>قابل للتوسعة بالكامل: أضف عددًا غير محدود من الوحدات والدروس.</p>
-                  </div>
-                  <div id="modulesContainer" class="modules-container"></div>
-                  <button type="button" class="btn ghost" id="addModuleBtn"><i class="fa-solid fa-plus"></i> إضافة وحدة جديدة</button>
-                </div>
-
-                <div class="builder-card">
-                  <div class="builder-card-head">
-                    <h3>بناء اختبار الدورة (Quiz Builder)</h3>
-                    <p>أنشئ بنك أسئلة كامل ليتم مراجعته من المشرف قبل نشر الدورة.</p>
-                  </div>
-                  <div id="assessmentQuestions" class="assessment-questions"></div>
-                  <button type="button" class="btn ghost" id="addQuestionBtn"><i class="fa-solid fa-plus"></i> إضافة سؤال</button>
-                </div>
-
-                <div class="builder-card">
-                  <div class="builder-card-head">
-                    <h3>ملف المنهج/الخطة</h3>
-                    <p>ارفع ملف PDF/DOC/DOCX لإضافة مرجعية تفصيلية للمراجعين.</p>
-                  </div>
-                  <label class="file-upload">اختيار الملف
-                    <input id="courseOutline" type="file" accept=".pdf,.doc,.docx" />
-                  </label>
+                  <button type="button" id="addLessonBtn" class="btn ghost add-lesson-main-btn">
+                    <i class="fa-solid fa-plus"></i>
+                    إضافة درس
+                  </button>
                 </div>
               </div>
 
@@ -337,32 +291,32 @@
 
         <!-- ✅ باقي Panels -->
         <div id="ws-drafts" class="workspace-panel">
-          <h3>مسوداتي الخاصة</h3>
+          <h3 class="panel-heading">مسوداتي الخاصة</h3>
           <div id="draftsList" class="submission-list"></div>
         </div>
 
         <div id="ws-pending" class="workspace-panel">
-          <h3>الدورات قيد المراجعة</h3>
+          <h3 class="panel-heading">الدورات قيد المراجعة</h3>
           <div id="pendingList" class="submission-list"></div>
         </div>
 
         <div id="ws-approved" class="workspace-panel">
-          <h3>الدورات المقبولة</h3>
+          <h3 class="panel-heading">الدورات المقبولة</h3>
           <div id="approvedList" class="submission-list"></div>
         </div>
 
         <div id="ws-rejected" class="workspace-panel">
-          <h3>الدورات المرفوضة (مع الأسباب)</h3>
+          <h3 class="panel-heading">الدورات المرفوضة (مع الأسباب)</h3>
           <div id="rejectedList" class="submission-list"></div>
         </div>
 
         <div id="ws-published" class="workspace-panel">
-          <h3>الدورات المنشورة</h3>
+          <h3 class="panel-heading">الدورات المنشورة</h3>
           <div id="publishedList" class="submission-list"></div>
         </div>
 
         <div id="ws-archived" class="workspace-panel">
-          <h3>الدورات المؤرشفة</h3>
+          <h3 class="panel-heading">الدورات المؤرشفة</h3>
           <div id="archivedList" class="submission-list"></div>
         </div>
 
@@ -375,6 +329,7 @@
           </div>
         </div>
       </div>
+      <div class="workspace-overlay" id="workspaceOverlay"></div>
     </section>
   </main>
 
@@ -383,17 +338,5 @@
   <script src="/js/main.js" defer></script>
   <script type="module" src="/js/instructor-dashboard.js?v=20260220"></script>
 
-  <!-- ✅ دعم زر طي السايدبار بدون كسر أي ميزة -->
-  <script>
-    (function () {
-      const btn = document.getElementById("workspaceSidebarToggle");
-      const ws = document.getElementById("instructorWorkspace");
-      if (!btn || !ws) return;
-
-      btn.addEventListener("click", () => {
-        ws.classList.toggle("sidebar-collapsed");
-      });
-    })();
-  </script>
 </body>
 </html>
