feat: add step-based student player and wizard instructor builder

--- a/instructor-dashboard.html
+++ b/instructor-dashboard.html
@@ -46,6 +46,7 @@
         <p class="hero-kicker">Instructor Studio</p>
         <h1>لوحة تحكم الأستاذ الاحترافية</h1>
         <p>ابنِ دورتك بنفس تجربة لوحة المشرف: معلومات شاملة، تخطيط مناهج مرن، معاينة مباشرة، ثم إرسال للمراجعة.</p>
+        <a class="btn primary" href="/instructor-builder.html">الانتقال إلى Builder 2.0</a>
       </div>
       <div class="instructor-kpis">
         <div><strong id="pendingCount">0</strong><span>قيد المراجعة</span></div>
